Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
=============

Silva 2.2b1 (unreleased)
------------------------

- exceptions raised during the upgrade process will now 
  include the object causing the error in the traceback.

- Fix annoying popup when using kupu in safari

- It is now possible to switch between abbreviations and
  acronyms in kupu by selecting the appropriate radio button
  and clicking 'update'

- Added an optional 'edit link reference' button to the 
  reference lookup window formulator widget.  Clicking this
  button on a valid silva reference will open up that reference's
  edit tab in a new window.

- changed presentation lookupwindow widget displays in
  kupu.  The link tools lookup widget has the new 'button with
  image' style for the get button, an edit reference button, and
  these buttons are displayed to the left and right (resp.) of the
  input field.

- Indexer, File and Image use Z3C forms as add forms.

- Interfaces have moved in silva.core.interfaces.

- Silva Link are displayed by default in Kupu TOCs.

- CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
  create a new empty paragraph below the table.  This feature
  is to improve editing ability when a table is adjacent to an
  external source or another table

- improve keyboard navigability in kupu around external sources:
  left,right in an ES moves cursor up
  enter in an ES inserts a new paragraph after and moves cursor
  down, right, tab in an es moves cursor down

- if an ES is the first element in a document, activate the ES
  tool when kupu initializes, and ignore the tab key when in an
  external source.

- Fix an invalid syntax in webdav support.

- Fixed an issue in Kupu, where text got 'title' style instead
  of 'plain'.

- Fix from the 2.1 branch for a bug and improvement of the code for
  scaling and cropping images.

- Added sup and sub selectors to frontend.css to keep superscript and